Oct 10 2013, v1.3
        License changed! See LICENSE for details
    New:
        proj_linfl2             Projects rows onto l2 norm constraints
        proj_affine.m           Projects onto generic affine constraints
        proj_singleAffine.m     Projects onto single affine constraint
        proj_boxAffine.m        In response to 
            http://ask.cvxr.com/question/749/tfocs-projecting-on-box-affine-constraint/: 
            projects onto intersection of box constraint and affine constraints
        proj_conic.m            Projects onto the second-order (aka Lorentz) cone
            Contributed by Joseph Salmon
        proj_l2group.m          Projections onto a partitioned l2 group constraint
            Contributed by Joseph Salmon
        linop_TV3D.m            Total variation for 3D grids (linop_TV is for 2D);
			contributed by Mahdi Hosseini (mahdi.hosseini@mail.utoronto.ca)
		test_LASSO.m 		    Tests the L1RLS (L1 regularized Least-Squares)
            problem, aka LASSO
        @single/*               Allow TFOCS objects to have data type single
			May not work well with sparse matrices (which are not allowed
			to be sparse data type). Thanks to Graham Coleman.
        mexFiles/*              New director with mex files
            Some non-core functions require mex files, and basic
            installation routines and the mex files themselves are in this
            directory.
		solver_OrderedLASSO.m   Solves the ordered LASSO problem
		test_OrderedLASSO.m     Test script for solver_OrderedLASSO
		prox_OL1.m              Proximity operator for the ordered LASSO
            See http://www-stat.stanford.edu/~candes/OrderedL1/
             "Statistical Estimation and Testing via the Ordered l1 Norm"
            by M. Bogdan, E. van den Berg, W. Su, and E. J. Candès, 2013
		mexFiles/proxAdaptiveL1Mex.c     Mex file helper for the ordered LASSO

    Modified:
		proj_maxEig.m           Fixed bug with variable names